Milestone 3: anti-spoofing (liveness enforcement, lockout, challenge) + README overhaul
